syntax = "proto3";
package pages.view;


message ViewPagesEvent {
  uint32 user_id = 1;
  string page_id = 2;
}
